initcontainer-sample.yaml

apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: sample-deployment
  labels:
    app: sample
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sample
  template:
    metadata:
      labels:
        app: sample
    spec:
      hostIPC: true
      containers:
      - name: sample
        image: tomcat:latest
        ports:
        - containerPort: 80
