jenkins-gitlab.yml
# Jenkins
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: jenkins
spec:
  replicas: 1
  template:
    metadata:
      labels:
        k8s-app: jenkins
    spec:
      containers:
      - name: jenkins
        image: registry.cn-hangzhou.aliyuncs.com/acs-sample/jenkins:2.60.3
        imagePullPolicy: Always
        volumeMounts:
        - mountPath: /var/jenkins_home
          name: home
      volumes:
        - name: home
          hostPath:
            path: "/jenkins_home_data"

---
apiVersion: v1
kind: Service
metadata:
  name: jenkins-svc
spec:
  ports:
  - port: 80
    targetPort: 8080
    name: web
  - port: 50000
    targetPort: 50000
    name: slave
  selector:
    k8s-app: jenkins
  type: LoadBalancer

# Jenkins slave
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: jenkins-slave-java
spec:
  replicas: 1
  template:
    metadata:
      labels:
        k8s-app: slave-java
    spec:
      containers:
      - name: slave-java
        image: registry.cn-hangzhou.aliyuncs.com/acs-sample/jenkins-slave-dind-java
        imagePullPolicy: Always
        volumeMounts:
          - mountPath: /var/run/docker.sock
            name: dockersocket
      volumes:
          - name: dockersocket
            hostPath:
              path: "/var/run/docker.sock"

---
apiVersion: v1
kind: Service
metadata:
  name: jenkins-slave-java-svc
spec:
  ports:
  - port: 22
    targetPort: 22
    protocol: TCP
  selector:
    k8s-app: slave-java

# gitlab
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: gitlab
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: gitlab
  template:
    metadata:
      labels:
        k8s-app: gitlab
    spec:
      containers:
      - name: gitlab
        image: registry.aliyuncs.com/acs-sample/gitlab-ce-cn:8.8.5

---
apiVersion: v1
kind: Service
metadata:
  name: gitlab-svc
spec:
  ports:
  - port: 30080
    targetPort: 80
    name: port80
  - port: 443
    targetPort: 443
    name: port443
  - port: 22
    targetPort: 22
    name: port22
  selector:
    k8s-app: gitlab
  type: LoadBalancer
