nginx-autoscaler.yml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: nginx-autoscaler
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-autoscaler
  template:
    metadata:
      labels:
        app: nginx-autoscaler
    spec:
      nodeSelector:
        created_by_autoscaler: "true"
      containers:
      - name: nginx-autoscaler
        image: nginx:latest
        ports:
        - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: nginx-autoscaler
spec:
  ports:
  - port: 80
    targetPort: 80
    name: nginx-autoscaler
  selector:
    app: nginx-autoscaler
  type: LoadBalancer
