nginx-pvc.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: nginx-pv
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx-pv
  template:
    metadata:
      labels:
        app: nginx-pv
    spec:
      containers:
      - name: nginx-pv
        image: nginx:latest
        ports:
        - containerPort: 80
        volumeMounts:
        - mountPath: "/usr/share/nginx/html"
          name: pvc1-1
      volumes:
        - name: pvc1-1
          persistentVolumeClaim:
            claimName: pvc1-1

---
apiVersion: v1
kind: Service
metadata:
  name: nginx-pv
spec:
  ports:
  - port: 80
    targetPort: 80
    name: nginx-80
  selector:
    app: nginx-pv
  type: LoadBalancer
