nginx-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-demo
spec:
  ports:
  - port: 80
    targetPort: 80
    name: nginx-demo
  selector:
    app: nginx-demo
  type: LoadBalancer
